@@ -1,7 +1,9 @@
 AUX fixwarnings.patch 862 SHA256 ff2bbe986fdf345e40d26ecc28e8246de40bbc0299a1e81873e15dca46499104 SHA512 34c9efbd32cdf88415f1c6d687636ae7ba62b3dc5b63096e57a2b19c33756157f2039e5ba7e5985a8ec6626f9b2a8e242808c968e5796bae8ffd77375e75c860 WHIRLPOOL b0590cd5d62c2a5b013579497c227915f492da5b3e766cb021d0b20f3dfd83ddb9796f718792322fe19d6b6e06c964049944cb4fc906e705b11c17d11d7c4a2d
 AUX ladish-1-include.patch 633 SHA256 8d0ebc16fd8bcdeac11d0ecb8c9c3f77822b199e9e27eb883a926952e1aebb0b SHA512 4ef6d5c19d2d570d518a4491ead5e074838d33604c13402ff0608a36bb1e4476e3294f31a644bb8700c62d2c4d73bd0fe15fff2a93e4c2b53e1ed771710d6a98 WHIRLPOOL 4642d387b91e57eadbbf3a728b6ee7e47d66ddab5d3035fe20392ef563c99d08fb5a094dd4456f6933433c0335250c5b774cac1879ccaa5df46a134d1a0bb5f0
 DIST ladish-1.tar.bz2 599209 SHA256 71065961f949f472cba50b6181b184d196d59332f6e9106403a37955906776d4 SHA512 10b321021d35655c94ef8558b32a24a650f298d97a05d5cb8119c3ee6a53059ba4a089af6c4bcc0fa5e4d6e112ced771b385e1eccc429a0b348437706c2f1c2b WHIRLPOOL ae2a4ffd8c39506b119a21e164a8cd1065a870abe4aca0019fb0387d705262dc49698950f10657c3497f62e99b52c0a277d57f188c845d8bf0c4954520844f34
+EBUILD ladish-1-r1.ebuild 1252 SHA256 879ecbb10c8ac0c428cad6bf768658b49ce417e32a8e441f56f972cdca5c7247 SHA512 c573cab31c17469da547a3f5b7ca445d8e2d33dcc3748dd0ef4ee7ac494033ea09fe882188d5f7808dbabb585595ba16776e3c965a18b88bd9f9f0de3a3a79b5 WHIRLPOOL d6ecb4753410b8b721bff77cf619ec8a3c8162e3ad6367fb21b0a48865e7f88b2e8b0c45ee24c0a4dde9626e05c697c56bb45babcebdbb99befab15db3b93cc8
 EBUILD ladish-1.ebuild 1436 SHA256 0f86e7aa693324256065d6b168f6ddf88b4aefe73a1e7086a16815286dff8c1b SHA512 1a5ef16f66081847fa851e92538ac75e644e4712b4c9bcd7bf0d34bc450a3887ecac079c579ccb2ffaacbbdfa0c4ba337265bc34b283fa4682403f700ecf69a2 WHIRLPOOL c2d293f1665b520a059460972516a6f0dc8e7d6b66defb97395c36819f464ff7db13b6cbcc9af4184172d20d258e2fc17fefee527549982de8bf3c13b1212518
+EBUILD ladish-9999-r1.ebuild 1186 SHA256 999d85d77b6af0a86e60be655f54d555d0dc9668a8c5e4fa8bcfd3eef13801a1 SHA512 8c1efe607f6bd4edd9370771de1c06d8f92e7bc425a98b8fe2c9e6623e1daa7d1c8cc1d491afad8bd6c5df94a9348a09dc659b211737935f514055b86ae8f945 WHIRLPOOL cb9222eb941531bc10f0bc658470acaa6e01e275a04e9eaca2bac5a6d736bac2e47953a0d0a772c7cdf74b7eaf0f1127e9661df256fb4d3f464b28dc580549e6
 EBUILD ladish-9999.ebuild 1319 SHA256 3ecb31799269797f1ad6d96c0fc830277fbf62d75d5245e9d82728c57e7c43e9 SHA512 500529f02aea0ac9eb898808001e96955c9393c06dd1749d3a69915b7523a66633f78f518253094ce54036fd5dfbf676e3d49c8ccdb7665a451a5da07170b5d7 WHIRLPOOL 51d8b986042fcd89eea80a933b6fe055bd1bef1a882e70c58d56184d011d5e94514da047fa6f0f5b5656f6479a15e81c9e5bda8a58e44c0bf70d254e0c80bc30
-MISC ChangeLog 994 SHA256 166bda238afd8add745bdd2ac1c8b27117f8a56f093eb192258dec7e01bcae86 SHA512 9e32c7beb14373908f18090dc2d47de9b4cfb9b5fb1ab377ea60a9ee8801462386ef8ae3cfbcef3892c8f36d798eee4786c55857db1b3505f4b4230a03a827fc WHIRLPOOL 7902b82ce9a29d90d64b8f6ab3ac0f1c869b9d1e0971a58f1414b91ea615a9f7c8720e688504e3959aa5a45f6506c83adb95dde59c5d473474482d811b0435b1
+MISC ChangeLog 1346 SHA256 4460a29d0de690e07453307db72e49066d54cbe0eb3fda30278783e040ba55f3 SHA512 6300bb5be0b5857d2fb60f1c9dc4cd0c827cd27c4f1c874b5d7c7ad70f3973aeb4bebdc1cae427bb17190581dab4c4962553e5a1801203f1307bf092bf175d0d WHIRLPOOL 1279ca1bd651e196477cf92122d63787b8b51a117cc11a55ca5fa993735ac6462b969c3e39fada91bb6674a6c5f3b4c472546375b4a9528902cba9c3ce77f32d
 MISC metadata.xml 548 SHA256 c4aeda7c00505448bfa4aee5c7108e0a5d7cc40b92850e2c3c92222869af0f39 SHA512 8bf27c0e0959195356691b0a5e16168b2bc8bf777e00201e4c85c7ca66c08aa52811c436f5204465716679183bafadf5b803195fb017835d8de4da28d86e1667 WHIRLPOOL 7cd4db8d4fdaab26c22b08cd0c27fed554aee28ca9626e486cf8e53d6be43f8b5027b00fc90d19c85fe885f17877e5458c591631d823ff347044ff2d03feaaef
